@@ -1655,6 +1655,7 @@ GEN     nfarchstar(GEN nf,GEN x,GEN arch);
 GEN     nfdiv(GEN nf, GEN x, GEN y);
 GEN     nfdiveuc(GEN nf, GEN a, GEN b);
 GEN     nfdivrem(GEN nf, GEN a, GEN b);
+GEN     nfembed(GEN nf, GEN x, long k);
 GEN     nfinv(GEN nf, GEN x);
 GEN     nfinvmodideal(GEN nf, GEN x, GEN ideal);
 GEN     nfmod(GEN nf, GEN a, GEN b);
@@ -1681,6 +1682,7 @@ GEN     rnfeltnorm(GEN rnf, GEN x);
 GEN     rnfelttrace(GEN rnf, GEN x);
 GEN     set_sign_mod_divisor(GEN nf, GEN x, GEN y, GEN idele, GEN sarch);
 GEN     vec01_to_indices(GEN arch);
+GEN     vecsmall01_to_indices(GEN v);
 GEN     vecmodii(GEN a, GEN b);
 GEN     ideallog(GEN nf,GEN x,GEN bigideal);
 
@@ -3170,6 +3172,7 @@ GEN     nffactor(GEN nf,GEN x);
 GEN     nffactormod(GEN nf,GEN pol,GEN pr);
 GEN     nfgcd(GEN P, GEN Q, GEN nf, GEN den);
 GEN     nfgcd_all(GEN P, GEN Q, GEN T, GEN den, GEN *Pnew);
+int     nfissquarefree(GEN nf, GEN x);
 GEN     nfroots(GEN nf,GEN pol);
 GEN     polfnf(GEN a, GEN t);
 GEN     rootsof1(GEN x);
